--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -1,10 +1,28 @@
+/*  help to referance week 5 notes and IMD website  */
+
 body{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
 }
+
 header,footer{
   background-color: blanchedalmond;
 }
+
 .site-title{
   color:blue;
+}
+ #my-image [src$=".jpg"] {
+  box-shadow: 0,0,2px,1px,black;
+}
+
+/* https://www.w3schools.com/cssref/index.php help to undertand "properities" of css , referance page */
+  ul li {
+list-style: square;
+ 
+}
+
+ul li:nth-child(odd){
+  background-color: red;
+  
 }
