--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -1,7 +1,7 @@
 /*  help to referance week 5 notes and IMD website  */
 
 body {
-  font-family: Arial, Helvetica, sans-serif font-size: 18px;
+  font-family:Arial, Helvetica, sans-serif; font-size: 18px;
 }
 
 header,
