--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -5,6 +5,7 @@ This css comment shortcut fpr adding the comment is command/ctrl + /
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: dark slategray;
+  background-image:url(../images/white_brick_wall.png);
 
 }
 
@@ -41,8 +42,22 @@ nav ul a {
 /* selecting element with ID value 
 As best practice avoid using ID for styles ( for spectificity )*/
 #Treatoftheweek {
-  background-color: cadetblue;
+  /* colour image repeat position-x position-y  */
+  background: cadetblue url(../images/bread.jpg) no-repeat center ;
+  /* background-size  cover image is cover ( regardless of h and W ) */
+  background-size: cover;
+font-size: 1.25rem; 
+/* 16 px *1.25= 20 px  */
+/* padding push elements away walls from the walls  */
+padding: 1em;
+/* 1 em * 20px( elements font size) =20 px  */
+width: 50%;
+/* height is 100% of the browser size and it is dynamic */
+/* height 100vh; */
+
+
 }
+
 
 /* Selecting html elements with class name  */
 .blue-link {
@@ -64,6 +79,14 @@ As best practice avoid using ID for styles ( for spectificity )*/
 /* Direct child selector- will only select direct child of the parent */
 article>p {
   font-size: 24px;
+  
+
+  /* css typography  properities  */
+  font-weight: bold;
+  line-height: 1.5;
+  text-transform: lowercase;
+  text-align: center;
+
 }
 
 /* adjecent sibling selector- selector the element that is the very next slibing to the selected element, IF any exist  */
@@ -105,51 +128,61 @@ nav ul a:focus {
 nav ul a:active {
   box-shadow: 0 0 4px 2px black;
 }
+
 /* first child and last child  */
 aside ul li:first-child {
-font-weight: bold;
-}
-section ol li:last-child{
   font-weight: bold;
 }
+
+section ol li:last-child {
+  font-weight: bold;
+}
+
 /* styling a table */
-table{
+table {
   border-collapse: collapse;
 }
+
 /* nth-child selector-even/odd */
-tbody tr:nth-child(even){
+tbody tr:nth-child(even) {
   background-color: #d5836c;
 }
+
 /* using the nth-child with n */
 /* where n is 0,1,2,3, and etc until the numbers of element ends */
 table th:nth-child(n),
 table td:nth-child(n) {
-    border: 1px solid black;
+  border: 1px solid black;
 }
+
 /* Using a formula in nth-child selectors */
-table td:nth-child(2n+1){
-  background-color: rgba(0,0,0,0.2);
+table td:nth-child(2n+1) {
+  background-color: rgba(0, 0, 0, 0.2);
 }
-/* CSS specificity */ 
+
+/* CSS specificity */
 /* formula: inline,ID,Class Tag-name */
 /*             0    0   0    0  */
 footer {
-  background-color:aqua;
+  background-color: aqua;
 }
+
 /* 0002 formula  */
 body footer {
   background-color: red;
 }
+
 /* 0002 */
 article h2 {
- text-transform: lowercase;
+  text-transform: lowercase;
 }
+
 /* 0011*/
-footer.site-footer{
+footer.site-footer {
   background-color: antiquewhite;
 }
 
 /* 0100 */
-#Treatoftheweek{
-  font: size 24px; 
+#Treatoftheweek {
+  font: size 24px;
 }
