--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,23 +1,43 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 
+
 }
-/*week 4,5 and 6 notes IMD website. 
+/*week 4,5,6 and 7 notes IMD website. 
  helping to understand Css code- Linkedin Learning CSS Essential Training 
 videos 2.CSS Core concepts
 ID selectors
 class selectors
 Descendant combinators and selector lists
 The background property
+video 3.The css box model
+The box model properties 
+box-sizing and the box model fix
  */
-.widestar {
+ .widestar{
+ padding: 200px;
+ padding-top: 0px;
+margin: 0;
 
-  background-repeat: no-repeat;
-  background-image: url(../images/lone-starfish-wide.jpg);
-  background-position: center;
-  
-  margin: 0 auto;
+
+
+ /* https://www.w3schools.com/howto/howto_css_image_text.asp */
 }
-h1 {
+h1{
+  font-size: 40px;
+  color: whitesmoke;
   
 }
+ 
+
+nav a{
+  padding: 110px;
+  padding-top: 0px;
+  margin:0;
+  display: inline;
+  font-size:  36px ;
+  text-decoration: none;
+ color: black;
+  
+}
+
