--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -2,6 +2,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding:0;
+  box-sizing: 0;
+background-position: 0;
 
 }
 
@@ -33,34 +35,69 @@ box-sizing and the box model fix
   position: static;
 }
 /* nav bar centre  */
-nav a {
-  display: inline;
- padding-left: 310px;
-  font-size: 30px;
+ a {
+  display:inline-block;
+  margin-right: -30px; 
+  margin-left: 350px;
+  font-size: 25px;
   text-decoration: none;
   color: black;
-  position: static;
+  text-align: center;
+  background-color: lightblue;
+ 
+ 
 
 }
 /* h2 title is align left centre */
 h2{
   margin-left: 240px;
+  margin-right: 240px;
   padding: 5% 0 0 5%;
   font-size: 36px;
+  margin-top: 0;
+  margin-bottom: 0 ;
   color: brown;
+  background-color: lightblue;
 
 }
 
-div p{
-  margin-left: 50%;
-    position: relative;
-    top: 35%;
-    right : 25%;
+p{
+  margin-left: 650px;
+  margin-right: 325px ;
+  margin-top: -300px;
+  margin-bottom: auto;
+  font-size: 16px;
+text-align:left;
+background-color: lightblue;
+
 }
 
 .starfish{
-  width: 250px ;
-  height: 250px ;
-  padding-right: ;
+  width: 275px ;
+  height: 275px ;
+  margin-left: 325px;
+  margin-right: 325px ;
+  margin-top: 0;
+  margin-bottom: 0 ;
+  background-color: lightblue;
+
+}
+
+.listfact{
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-top: 0;
+  margin-bottom: 0 ;
+  background-color: lightblue;
+}
+.contact{
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-top: 0;
+  margin-bottom: 0 ;
+ background-color: lightblue;
+ border: 5px solid black;
   
 }
+
+
