--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -4,6 +4,7 @@ body {
   padding:0;
   box-sizing: 0;
 background-position: 0;
+background-color: aqua;
 
 }
 
@@ -21,8 +22,14 @@ box-sizing and the box model fix
  */
 
 .widestar {
-  padding-left: 280px;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-bottom: 15px;
   position: cover;
+  width: 950px;
+
+
+
 }
 
 /* https://www.w3schools.com/howto/howto_css_image_text.asp */
@@ -37,38 +44,40 @@ box-sizing and the box model fix
 /* nav bar centre  */
  a {
   display:inline-block;
+
   margin-right: -30px; 
   margin-left: 350px;
   font-size: 25px;
   text-decoration: none;
   color: black;
   text-align: center;
-  background-color: lightblue;
+  /* background-color: lightblue; */
  
  
 
 }
 /* h2 title is align left centre */
 h2{
-  margin-left: 240px;
-  margin-right: 240px;
-  padding: 5% 0 0 5%;
+  margin-left: 290px;
+  margin-right: 300px;
+  padding: 2% 0 0 2%;
   font-size: 36px;
   margin-top: 0;
   margin-bottom: 0 ;
   color: brown;
-  background-color: lightblue;
+  /* background-color: lightblue; */
 
 }
 
 p{
   margin-left: 650px;
-  margin-right: 325px ;
+  margin-right: 300px ;
   margin-top: -300px;
   margin-bottom: auto;
   font-size: 16px;
+   padding-right: 25px;
 text-align:left;
-background-color: lightblue;
+/* background-color: lightblue; */
 
 }
 
@@ -79,25 +88,48 @@ background-color: lightblue;
   margin-right: 325px ;
   margin-top: 0;
   margin-bottom: 0 ;
-  background-color: lightblue;
+  border: 3px solid black;
+ 
+  
 
 }
+
 
 .listfact{
   margin-left: 300px;
   margin-right: 300px;
   margin-top: 0;
   margin-bottom: 0 ;
-  background-color: lightblue;
+  /* background-color: lightblue; */
 }
-.contact{
+
+h3{
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-top: 20px;
+  margin-bottom: 0 ;
+  padding-bottom: 20px;
+  padding-top:40px;
+  /* background-color: lightblue; */
+}
+.form{
   margin-left: 300px;
   margin-right: 300px;
   margin-top: 0;
   margin-bottom: 0 ;
- background-color: lightblue;
+ /* background-color: lightblue; */
  border: 5px solid black;
-  
+
 }
 
-
+footer{
+  text-align: right;
+  margin-right: 300px;
+  margin-left: 300px;
+  background-color: lightblue;
+}
+ nav,main{
+  background-color: lightblue;
+ 
+ 
+}
