--- a/week7/css/main.css
+++ b/week7/css/main.css
@@ -89,15 +89,23 @@ As best practice avoid using ID for styles ( for spectificity )*/
   width: 50%;
   /* height is 100% of the browser size and it is dynamic */
   /* height 100vh; */
-
+position: relative;
+padding: 1em 1em 4em 1em;
 
 }
 
+/* position Abolute base onbrower  */
+.blue-link.large-text{
+  position:absolute;
+  bottom:0;
+  right:0;
+}
 
 /* Selecting html elements with class name  */
 .blue-link {
-  padding: 5 em;
+  padding: 1.5em;
   width: 300px;
+  display: block;
   background-color: darkslategray;
   color: antiquewhite;
   text-decoration: none;
@@ -166,9 +174,18 @@ h3~p {
 }
 
 [src$=".jpg"] {
-  border: 4px solid darkslategray;
-}
+  border: 8px solid darkslategray;
 
+}
+/* fixed navigare */
+nav{
+  position: fixed ;
+  top: 0;
+  left:0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+
+}
 /* psuedo classes */
 /* styling the Navigation */
 nav ul a,
