add from css to display border around form

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -138,8 +138,6 @@ section form ul li {
   color: blue; 
  font-size: 15px;
   list-style: none;
- 
- 
 
 }
 h5{
@@ -151,16 +149,22 @@ h5{
   font-size: 18px;
   list-style: none;
 }
-.radioin{
-  display: inline;
+ form{
+  border: 3px solid black;
+  padding-left: 10% ;
+  padding-right:15% ;
+  
+ }
 
 
 
-}
+
 footer{
 position: relative;
  left: 70%;
 }
+
+
 
 
 
