--- a/week10/css/main.css
+++ b/week10/css/main.css
@@ -1,145 +1,213 @@
-/* *********************************\**
-Custom Styles 
-**************************************** */
-/* *****Global styles*******/
-html {
+/************************************* 
+                Custom Styles
+ *************************************/
+ /*********** Global Styles ***********/
+ html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   box-sizing: border-box;
 }
-body{
+
+body {
   line-height: 1.5;
-  }
+}
+
 *,
 *:after,
-*:before{
+*:before {
   box-sizing: inherit;
-  line-height: inherit;
 }
-.clearfix::after{
+
+.clearfix::after {
   content: '';
   display: table;
   clear: both;
 }
-img{
-  width: 100%; 
+
+img {
+  width: 100%;
 }
-/* LoVe HAte: linked, visited. Hover/Focus, Active */
+
+/* LoVe HAte - Link, Visited, Hover/focus, Active */
 a,
-a:link
-a:visited{
+a:link,
+a:visited {
   color: inherit;
 }
+
 a:hover,
-a:focus{
+a:focus {
   color: #00add8;
 }
 
-h1,h2,h3,h4,h5{
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-weight: bold;
-  margin: 1em 0 0.5rem; 
+  margin: 1em 0 0.5em;
 }
-/* To ensure font sizes are portionate to each to other and not random value: www.modularscale.com */
-h1{
+/* To ensure font sizes are proportionate */
+/* https://www.modularscale.com/ */
+h1 {
   font-size: 5.063rem;
 }
-h2{
+h2 {
   font-size: 3.375rem;
 }
-h3{
+h3 {
   font-size: 2.25rem;
 }
-h4{
+h4 {
   font-size: 1.5rem;
 }
-h5{
-  font-size: 1 rem;
+h5 {
+  font-size: 1rem;
 }
-
-p{
+p {
   margin: 1em 0;
 }
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1 em;
+  padding: 1em;
 }
-/* ****HEADER****/
-.mobile-logo{
+
+/**********HEADER***********/
+.mobile-logo {
   max-width: 150px;
 }
-.desktop-logo{
+.desktop-logo {
   display: none;
 }
-.banner{
+.banner {
   height: 600px;
-  background: grey url(..//images/smog-mobile.jpg) no-repeat center bottom;
-  background-size: cover ;
+  background: grey url(../images/smog-mobile.jpg) no-repeat center bottom;
+  background-size: cover;
 }
-.banner h1{
+
+.banner h1 {
   margin: 0;
   padding-top: 250px;
   text-align: center;
   text-transform: uppercase;
-
 }
-/* ***mobile app section **** */
-.btn{
+
+/************NAVIGATION************/
+.nav-list {
+ border-bottom: 1px solid grey;
+}
+
+/* LoVe HAte */
+.nav-list a,
+.nav-list :link,
+.nav-list a:visited {
+ display: block;
+ padding: 1em 0;
+ text-align: center;
+}
+
+.nav-list a:hover,
+.nav-list a:focus,
+.nav-list a.current {
+ background-color: #00add8;
+ color: inherit;
+}
+
+
+
+.btn {
   text-decoration: none;
   display: inline-block;
   padding: 20px;
-  border: 1px solid grey;
-  border-radius: 6px;
+  border: 1px solid #00add8;
+  color: inherit;
+  border-radius: 8px;
 }
-
 .btn:hover,
-.btn:focus{
+.btn:focus {
   background-color: #00add8;
   color: inherit;
 }
-.site-footer{
+
+/*******Action Section***********/
+.actions-list {
+ display: flex;
+ flex-flow: row wrap;
+}
+
+.actions-list li {
+ max-width: 50%;
+ padding: 1em;
+ text-align: center;
+ font-size: 1.5rem;
+}
+
+/**********FOOTER STYLES*********/
+.site-footer {
   margin-top: 20px;
   padding: 20px 0;
   border-top: 2px solid #00add8;
 }
 
-.copy{
+.copy {
   text-align: right;
 }
-/* **************************** */
-/*         Desktop Styles      */
-/* *************************** */
 
-@media screen and (min-width: 600px) {
-  html{
-    font-size: 16px;
+/*************************************
+          DESKTOP STYLES
+***************************************/
+@media screen and (min-width:600px) {
+  html {
+      font-size: 16px;
   }
-  .mobile-logo{
-    display: none;
+  .mobile-logo {
+      display: none;
   }
- .desktop-logo{
-  display: inline-block;
-  max-width: 300px;
+  .desktop-logo {
+      display: inline-block;
+      max-width: 300px;
+  }
+  .banner {
+      background-image: url(../images/smog-desktop.jpg);
+  }
+  .banner h1 {
+      color: white;
+  }
 
+  /***********NAVIGATION***********/
+  .nav-list {
+    display: flex;
+  }
+
+  .nav-list li {
+    flex: 1;
+    border: none;
+    border-right: 1px solid grey;
+  }
+
+  .nav-list li:last-child {
+    border: none;
+  }
+
+  /********APP SECTION**********/
+  .app img {
+      width: 40%;
+      float: left;
+      margin-right: 1em;
+  }
+
+  .app .btn {
+      float: right;
+  }
+}
+
+/**************************** 
+    MEDIA QUERY 800px
+****************************/
+@media screen and (min-width: 800px) {
+ .actions-list li {
+    max-width: 20%;
  }
-.banner{
-  background-image: url(../images/smog-desktop.jpg);
 }
-.banner h1 {
-  color: white;
-}
-/* ********App section ******** */
-.app img {
-  width: 40%;
-  float: left;
-  margin-right: 1em ;
-  
-}
-.app .btn{
-  float: right;
-}
-
-
-
-}
-
