--- a/week11/css/main.css
+++ b/week11/css/main.css
@@ -155,6 +155,27 @@ p {
   text-align: right;
 }
 
+/* ********Climate page styles************** ******************/
+
+.card {
+  border: 2 px solid blue;
+  border-radius:6px; 
+  margin-botton: 1em;
+  padding: 1em;
+}
+.card .info {
+  padding: 1em;
+}
+.card h3: {
+  margin-top: 0;
+}
+/* *** News Section */
+.news{
+  border: 2px soild blue;
+  margin-top: 4em;
+}
+
+
 /*************************************
           DESKTOP STYLES
 ***************************************/
@@ -210,4 +231,47 @@ p {
  .actions-list li {
     max-width: 20%;
  }
+ /* ***********************
+ Climate page Styles 
+ ********** */
+ .card{ 
+  display: grid;
+  grid-template-columns: repeat (3, 1fr);
+  gap: 1em; 
+
+
+  
+ }
+.news {
+display: grid;
+grid-template-columns: repeat(2, 1fr) ;
+grid-template-rows: repeat(3, auto);
+grid-template-areas: "header header"
+"left right"
+"left right";
+gap: 1em;
+}
+.news h2{ 
+grid-area: header;
+  
+}
+.news .left{
+  grid-area: left;
+}
+.right{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1em;
+}
+.news .right img{
+  grid-row: 1/3;
+
+}
+.news .right h3 {
+  margin-top: 0;
+  font-size: 1.5rem;
+
+}
+
+
 }
