--- a/week11/css/main.css
+++ b/week11/css/main.css
@@ -1,8 +1,8 @@
 /************************************* 
                 Custom Styles
  *************************************/
- /*********** Global Styles ***********/
- html {
+/*********** Global Styles ***********/
+html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   box-sizing: border-box;
@@ -48,26 +48,33 @@ h5 {
   font-weight: bold;
   margin: 1em 0 0.5em;
 }
+
 /* To ensure font sizes are proportionate */
 /* https://www.modularscale.com/ */
 h1 {
   font-size: 5.063rem;
 }
+
 h2 {
   font-size: 3.375rem;
 }
-h3 {  
+
+h3 {
   font-size: 2.25rem;
 }
+
 h4 {
   font-size: 1.5rem;
 }
+
 h5 {
   font-size: 1rem;
 }
+
 p {
   margin: 1em 0;
 }
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -78,9 +85,11 @@ p {
 .mobile-logo {
   max-width: 150px;
 }
+
 .desktop-logo {
   display: none;
 }
+
 .banner {
   height: 600px;
   background: grey url(../images/smog-mobile.jpg) no-repeat center bottom;
@@ -96,23 +105,23 @@ p {
 
 /************NAVIGATION************/
 .nav-list {
- border-bottom: 1px solid grey;
+  border-bottom: 1px solid grey;
 }
 
 /* LoVe HAte */
 .nav-list a,
 .nav-list :link,
 .nav-list a:visited {
- display: block;
- padding: 1em 0;
- text-align: center;
+  display: block;
+  padding: 1em 0;
+  text-align: center;
 }
 
 .nav-list a:hover,
 .nav-list a:focus,
 .nav-list a.current {
- background-color: #00add8;
- color: inherit;
+  background-color: #00add8;
+  color: inherit;
 }
 
 
@@ -125,6 +134,7 @@ p {
   color: inherit;
   border-radius: 8px;
 }
+
 .btn:hover,
 .btn:focus {
   background-color: #00add8;
@@ -133,15 +143,15 @@ p {
 
 /*******Action Section***********/
 .actions-list {
- display: flex;
- flex-flow: row wrap;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .actions-list li {
- max-width: 50%;
- padding: 1em;
- text-align: center;
- font-size: 1.5rem;
+  max-width: 50%;
+  padding: 1em;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 /**********FOOTER STYLES*********/
@@ -155,23 +165,27 @@ p {
   text-align: right;
 }
 
+
 /* ********Climate page styles************** ******************/
 
 .card {
-  border: 2 px solid blue;
-  border-radius:6px; 
-  margin-botton: 1em;
-  padding: 1em;
+  border: 2 px solid #00add8;
+  border-radius: 6px;
+  margin-bottom: 1em;
+
 }
+
 .card .info {
   padding: 1em;
 }
-.card h3: {
+
+.card h3 {
   margin-top: 0;
 }
+
 /* *** News Section */
-.news{
-  border: 2px soild blue;
+.news {
+  border: 2px soild #00add8;
   margin-top: 4em;
 }
 
@@ -181,20 +195,24 @@ p {
 ***************************************/
 @media screen and (min-width:600px) {
   html {
-      font-size: 16px;
+    font-size: 16px;
   }
+
   .mobile-logo {
-      display: none;
+    display: none;
   }
+
   .desktop-logo {
-      display: inline-block;
-      max-width: 300px;
+    display: inline-block;
+    max-width: 300px;
   }
+
   .banner {
-      background-image: url(../images/smog-desktop.jpg);
+    background-image: url(../images/smog-desktop.jpg);
   }
+
   .banner h1 {
-      color: white;
+    color: white;
   }
 
   /***********NAVIGATION***********/
@@ -214,13 +232,13 @@ p {
 
   /********APP SECTION**********/
   .app img {
-      width: 40%;
-      float: left;
-      margin-right: 1em;
+    width: 40%;
+    float: left;
+    margin-right: 1em;
   }
 
   .app .btn {
-      float: right;
+    float: right;
   }
 }
 
@@ -228,50 +246,59 @@ p {
     MEDIA QUERY 800px
 ****************************/
 @media screen and (min-width: 800px) {
- .actions-list li {
+  .actions-list li {
     max-width: 20%;
- }
- /* ***********************
+  }
+
+  /* ***********************
  Climate page Styles 
  ********** */
- .card{ 
-  display: grid;
-  grid-template-columns: repeat (3, 1fr);
-  gap: 1em; 
+  .card {
+    display: grid;
+    grid-template-columns: repeat (3, 1fr);
+    gap: 1em;
 
 
-  
- }
-.news {
-display: grid;
-grid-template-columns: repeat(2, 1fr) ;
-grid-template-rows: repeat(3, auto);
-grid-template-areas: "header header"
-"left right"
-"left right";
-gap: 1em;
-}
-.news h2{ 
-grid-area: header;
-  
-}
-.news .left{
-  grid-area: left;
-}
-.right{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 1em;
-}
-.news .right img{
-  grid-row: 1/3;
 
-}
-.news .right h3 {
-  margin-top: 0;
-  font-size: 1.5rem;
 
-}
+  }
+
+  .news {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-template-areas: "header header"
+      "left right1"
+      "left right2";
+    gap: 1em;
+
+  }
+
+  .news h2 {
+    grid-area: header;
+
+  }
+
+  .news .left {
+    grid-area: left;
+  }
+
+  .right {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1em;
+  }
+
+  .news .right img {
+    grid-row: 1/3;
+
+  }
+
+  .news .right h3 {
+    margin-top: 0;
+    font-size: 1.5rem;
+
+  }
 
 
 }
