add css code max-width and margin and add html  class

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -1,2 +1,9 @@
 /* font stlye https://fonts.google.com/specimen/Open+Sans?query=open+sans
  font-family: 'Open Sans', sans-serif; */
+.boxset {
+  max-width: 1200px;
+  margin: auto 0;
+}
+nav ul li a {
+  display: flex;
+}
