--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -23,6 +23,7 @@
 /* nav bar back ground colour */
 nav ul li {
   background-color: black;
+
   padding-bottom: 5%;
 }
 /* nav bar hover focus background */
@@ -31,11 +32,13 @@ nav ul li:focus {
   background-color: #c78c06;
   border: 5px solid black;
 }
-/* search tool bar home abour services teams contact */
+/* search tool bar home abour services teams contact
+week 5 text-decoration */
 .to-bar {
   position: relative;
   left: 45%;
   color: #c78c06;
+  text-decoration: none;
 }
 
 /* hover and focus tool bar */
@@ -47,40 +50,47 @@ nav ul li:focus {
 .search {
   padding-left: 45%;
 }
-/* week 6  */
+/* week 6  width-max margin */
 .width-max .margin {
   margin: auto 0;
   max-width: 1200px;
 }
 
 /* welcome to three star media page whole */
-
+/* background welcome image */
 .welcome,
 .wel-p {
-  background: #222 transparent;
   background-image: url("../images/main-banner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 400px;
-  height: 300px;
+
+  max-width: 600px;
+  height: 400px;
 }
 /* welcome title and paragraph padding moving  */
 .wel-p {
   padding-top: 15%;
-  background-color: lightgray;
+  color: white;
+  background-color: #222;
 }
+/* both text and header */
 .wel-p h1 {
   font-size: 50px;
   font-style: bold;
   padding-bottom: 2%;
+  color: white;
+  background-color: black;
 }
+/* welcome paragraph  */
 .wel-p p {
   font-size: 12px;
+  background-color: #222;
 }
 
 /* https://www.w3schools.com/css/css3_buttons.asp
 created the button connect with us button  hover and focus
- */
+ unverial buttons expect for Our Vision
+ week 5  text-decoration: none;*/
 .buttons,
 .buttons:hover,
 .buttons:focus {
@@ -93,86 +103,155 @@ created the button connect with us button  hover and focus
   height: 100px;
   padding: 4%;
 }
-
+/*  connect with us -buttons 
+ text-decoration: none; */
 .buttons {
   color: #222;
   margin-bottom: 5%;
   margin-right: 5%;
+  text-decoration: none;
 }
-/*About us page   */
-/* .boxes {
-    /* background-color: bisque; }*/
 
-/* ping-pon image- about us  */
-.im-ping img {
-  width: 400px;
+/* univerial setting image and heading and paragraphs */
+/* all the images  */
+img {
+  width: 500px;
   height: 300px;
-  padding-top: 3%;
-  background-color: bisque;
+}
+/* all headings 1to 6 bold font and weight https://www.w3schools.com/cssref/pr_font_weight.php 
+https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 22px;
+  font-weight: bolder;
+  font-weight: 900;
+  margin-bottom: 2%;
+  padding-top: 5%;
+}
+/* all paragraphs sentence spacing 
+https://www.w3schools.com/cssref/pr_dim_line-height.php
+ */
+p {
+  font-size: 10px;
+  font-weight: 500;
+  padding-bottom: 3%;
+  margin-bottom: 2%;
+  line-height: 1;
+}
+
+/* individually adjustmenets each panel */
+/*About us page   */
+
+.im-ping img {
+  border: 5px solid #ffe6ac;
 }
 /*about us margin */
 .abou-p {
   margin-bottom: 15%;
-  padding-bottom: 5%;
-  background-color: bisque;
+  padding-top: 5%;
+  padding-bottom: 15%;
+  background-color: #ffe6ac;
 }
 /* about us  about us h2 and pargraph */
 .abou-p h2 {
-  font-size: 30px;
   padding-bottom: 5%;
   padding-top: 5%;
 }
-/* about us pargraphy */
-.abou-p p {
-  font-size: 11px;
-}
-/* service title background whitle */
+
+/* service title background whitle /* all headings 1to 6 bold font and weight https://www.w3schools.com/cssref/pr_font_weight.php 
+https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
 #service {
-  font-size: 30px;
+  font-size: 50px;
 }
 
 /*  Our service page desktop and smartphone image  */
-.dig-card img {
-  width: 400px;
-  height: 300px;
-}
+
 /* Our services  */
 .title-p {
-  background-color: bisque;
+  background-color: #ffe6ac;
 }
 /* title and paragraphy formate font size */
 .title-p h3 {
-  font-size: 15px;
   padding-bottom: 3%;
   padding-top: 1%;
+  font-size: ;
 }
 .title-p p {
-  font-size: 10px;
   padding-bottom: 5%;
+  background-color: #ffe6ac;
 }
+
 /* digital plan button and icon */
 .button,
 .button:hover,
 .button:focus {
   position: relative;
-  left: 5%;
+  top: 15%;
   background-color: black;
-  border: 1px solid black;
+  border: 2px solid black;
 
-  width: 350px;
+  width: 400px;
   height: 100px;
-  padding: 2%;
+  padding: 4%;
 }
-
 .button {
   color: white;
   margin-bottom: 3%;
   margin-right: 3%;
   font-size: small;
+  text-decoration: none;
+}
+/* digital transformation background */
+
+.title-p {
+  background-color: #ffe6ac;
+  padding-bottom: 8%;
 }
 
+/* makerkting photo image */
 .market {
-  width: 400px;
-  height: 300px;
-  margin-top: 5px;
+  margin-top: 2%;
+  background-color: #ffe6ac;
+}
+
+/* Our vision section */
+/* our vision background image */
+.vis-s,
+.special-margin {
+  background-image: url("../images/vision.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  max-width: 450px;
+  height: 200px;
+}
+/* paragrah */
+.vtex-p {
+  color: white;
+}
+/* button */
+
+.vbut,
+.vbut:hover,
+.vbut:focus {
+  position: absolute;
+  left: 9%;
+  bottom: ;
+  background-color: rgb(30, 30, 55);
+  width: 154px;
+  height: 70px;
+  padding: 5% 5% 5% 5%;
+}
+/*  connect with us buttons   */
+.vbut {
+  color: white;
+  margin-bottom: 5%;
+  margin-right: 5%;
+  font-size: 14px;
+  text-decoration: none;
+  border: 0.1px solid #ffe6ac;
 }
