--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -115,8 +115,8 @@ created the button connect with us button  hover and focus
 /* univerial setting image and heading and paragraphs */
 /* all the images  */
 img {
-  width: 500px;
-  height: 300px;
+  width: 600px;
+  height: 400px;
 }
 /* all headings 1to 6 bold font and weight https://www.w3schools.com/cssref/pr_font_weight.php 
 https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
@@ -140,7 +140,7 @@ p {
   font-weight: 500;
   padding-bottom: 3%;
   margin-bottom: 2%;
-  line-height: 1;
+  line-height: 1.5;
 }
 
 /* individually adjustmenets each panel */
@@ -225,8 +225,9 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
   background-image: url("../images/vision.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  border-top: 5px solid white;
 
-  max-width: 450px;
+  max-width: px;
   height: 200px;
 }
 /* paragrah */
@@ -238,9 +239,10 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
 .vbut,
 .vbut:hover,
 .vbut:focus {
-  position: absolute;
-  left: 9%;
-  bottom: ;
+  position: relative;
+  left: 15px;
+
+  margin-left: 6.5%;
   background-color: rgb(30, 30, 55);
   width: 154px;
   height: 70px;
@@ -254,4 +256,67 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
   font-size: 14px;
   text-decoration: none;
   border: 0.1px solid #ffe6ac;
+}
+/* Teams section specification */
+/* our team title  */
+#team {
+  padding-bottom: 5%;
+  font-size: 1rem;
+  font-weight: 900 bolder;
+}
+/* teams container */
+.team-s {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+/* text and paragraphs background */
+.ti-tex-p {
+  background-color: #ffe6ac;
+  padding-bottom: 0.45%;
+}
+/* text and heading 2  */
+.ti-tex-p h2 {
+}
+/* text and heading 3  */
+.ti-tex-p h3 {
+  font-size: 10px;
+  margin-top: -5%;
+}
+/* text and heading 4  */
+.ti-tex-p h4 {
+  color: #c78c06;
+  margin-top: -11%;
+}
+/* text and paragrah */
+.ti-tex-p p {
+  line-height: 1.5;
+}
+
+.bob {
+  border-top: 5px solid white;
+}
+
+/* Contact us and send us a message form 
+hour of Operation */
+.width-max,
+.margin {
+  max-width: 1200px;
+  margin: auto 0;
+}
+/* forms  */
+.form ul li {
+  font-size: 8px;
+}
+/*  table of open close operation */
+.open-s table tr th {
+  border: 2px solid black;
+  padding-right: 10%;
+}
+.open-s table tr td {
+  border: 2px solid black;
+}
+
+/* footer */
+footer {
+  background-color: #222;
 }
