--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -6,12 +6,50 @@
   margin: auto 0;
   box-sizing: border-box;
 }
+.width-max .margin {
+  max-width: 1200px;
+  margin: auto 0;
+}
 /* week 7 boxsizing  and box element standards */
 *,
 *:after,
 *:before {
   box-sizing: inherit;
 }
+/* univerial setting image and heading and paragraphs */
+/* all the images  */
+img {
+  /* position: relative;
+  left: 25%; */
+
+  width: 500px;
+  height: 400px;
+}
+/* all headings 1to 6 bold font and weight https://www.w3schools.com/cssref/pr_font_weight.php 
+https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 22px;
+  font-weight: bolder;
+  font-weight: 900;
+  margin-bottom: 2%;
+  padding-top: 5%;
+}
+/* all paragraphs sentence spacing 
+https://www.w3schools.com/cssref/pr_dim_line-height.php
+ */
+p {
+  font-size: 10px;
+  font-weight: 500;
+  padding-bottom: 3%;
+  margin-bottom: 2%;
+  line-height: 1.5;
+}
+
 /* imag star logo */
 .star-logo {
   width: 75px;
@@ -58,16 +96,21 @@ week 5 text-decoration */
 
 /* welcome to three star media page whole */
 /* background welcome image */
+.width-max .margin {
+  max-width: 1200px;
+  margin: auto 0;
+}
 .welcome,
 .wel-p {
   background-image: url("../images/main-banner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 
-  max-width: 600px;
+  max-width: 1200px;
   height: 400px;
 }
 /* welcome title and paragraph padding moving  */
+
 .wel-p {
   padding-top: 15%;
   color: white;
@@ -112,37 +155,6 @@ created the button connect with us button  hover and focus
   text-decoration: none;
 }
 
-/* univerial setting image and heading and paragraphs */
-/* all the images  */
-img {
-  width: 600px;
-  height: 400px;
-}
-/* all headings 1to 6 bold font and weight https://www.w3schools.com/cssref/pr_font_weight.php 
-https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 22px;
-  font-weight: bolder;
-  font-weight: 900;
-  margin-bottom: 2%;
-  padding-top: 5%;
-}
-/* all paragraphs sentence spacing 
-https://www.w3schools.com/cssref/pr_dim_line-height.php
- */
-p {
-  font-size: 10px;
-  font-weight: 500;
-  padding-bottom: 3%;
-  margin-bottom: 2%;
-  line-height: 1.5;
-}
-
 /* individually adjustmenets each panel */
 /*About us page   */
 
@@ -153,7 +165,7 @@ p {
 .abou-p {
   margin-bottom: 15%;
   padding-top: 5%;
-  padding-bottom: 15%;
+  /* padding-bottom: 15%; */
   background-color: #ffe6ac;
 }
 /* about us  about us h2 and pargraph */
@@ -168,11 +180,13 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
   font-size: 50px;
 }
 
-/*  Our service page desktop and smartphone image  */
+/*  Our service page smartphone image  */
 
-/* Our services  */
+/* Our services */
 .title-p {
   background-color: #ffe6ac;
+  width: 500px;
+  height: 220px;
 }
 /* title and paragraphy formate font size */
 .title-p h3 {
@@ -226,10 +240,12 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
   background-repeat: no-repeat;
   background-size: cover;
   border-top: 5px solid white;
-
   max-width: 1200px;
+
   height: 200px;
+  margin: auto 0;
 }
+
 /* paragrah */
 .vtex-p {
   color: white;
@@ -239,24 +255,24 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
 .vbut,
 .vbut:hover,
 .vbut:focus {
-  position: relative;
-  left: 15px;
+  display: block;
+  border: 0.5px solid #ffe6ac;
+  background-color: rgb(18, 21, 41);
 
-  margin-left: 6.5%;
-  background-color: rgb(30, 30, 55);
-  width: 154px;
-  height: 70px;
-  padding: 5% 5% 5% 5%;
+  width: 120px;
+  height: 55px;
+  padding: 2% 2% 2% 2%;
 }
-/*  connect with us buttons   */
 .vbut {
+  position: relative;
+  bottom: 15%;
   color: white;
-  margin-bottom: 5%;
-  margin-right: 5%;
-  font-size: 14px;
+
+  margin-right: 3%;
+  font-size: small;
   text-decoration: none;
-  border: 0.1px solid #ffe6ac;
 }
+
 /* Teams section specification */
 /* our team title  */
 #team {
@@ -272,6 +288,8 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
 /* text and paragraphs background */
 .ti-tex-p {
   background-color: #ffe6ac;
+  width: 500px;
+  height: 220px;
   padding-bottom: 0.45%;
 }
 /* text and heading 2  */
